--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         <option value="喝的">
         <option value="玩的">
         <option value="休閒">
+      </datalist>   
+      <!-- 地區輸入 -->
       <input type="text" id="placeArea" placeholder="地區" list="areaList" />
+      <!-- 儲存按鈕 -->
       <button onclick="addPlace()">儲存地點</button>
 
       <!-- 提示地區 datalist -->
@@ -83,4 +86,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
