--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
         <option value="玩的">玩的</option>
         <option value="休閒">休閒</option>
       </select>
+
+      <!-- 細分類（連動顯示） -->
+      <select id="placeSubtype" disabled hidden>
+        <option value="">請選擇細分類</option>
+      </select>
+      
       <!-- 地區輸入 -->
       <input type="text" id="placeArea" placeholder="地區" list="areaList" />
       <!-- 儲存按鈕 -->
@@ -89,6 +95,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
