--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <option value="休閒">休閒</option>
       </select>
 
-      <!-- 細分類（連動顯示） -->
+      <!-- 細分類（初始隱藏，選了類型才會顯示） -->
       <select id="placeSubtype" disabled hidden>
         <option value="">請選擇細分類</option>
       </select>
@@ -95,6 +95,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
