--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <select id="filterType">
           <option value="">所有類型</option>
         </select>
+        <select id="filterSubtype" disabled>
+          <option value="">所有細項</option>
+        </select>
         <select id="filterArea">
           <option value="">所有地區</option>
         </select>
@@ -96,6 +99,7 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
